Initial c1 fixes & cancel button on loan repayment

--- a/front-end/src/app/forms/sched-c/loanpayment/loanpayment.component.html
+++ b/front-end/src/app/forms/sched-c/loanpayment/loanpayment.component.html
@@ -259,6 +259,7 @@
       <div class="grid-row">
         <div class="grid-row__col grid-row__col--12">
           <div class="forms__btn-container">
+            <button id="submit" class="btn btn-previous btn-left" (click)="cancelLoanPayment()">Cancel</button>
             <button id="submit" class="btn btn-primary btn-right" type="submit">Submit</button>
           </div>
         </div>
