--- a/front-end/src/app/forms/sched-h2/sched-h2.component.html
+++ b/front-end/src/app/forms/sched-h2/sched-h2.component.html
@@ -201,63 +201,56 @@
           </div>
         </div>
         <div class="row">
-
-              <div class="col col-md-2"></div>
-              <div class="col col-md-3 form-group">
-                <div class="row input-group">
-                  <div class="subtitle2">
-                      Federal:
-                  </div>
-                  <input class="form-control" 
-                    type="number" 
-                    formControlName="federal_percent"
-                    [ngClass]="schedH2.get('federal_percent')?.invalid &&
-                      (schedH2.touched || schedH2.dirty)  && isSubmit 
-                          ? 'input-field-error' : ''"                      
-                    (keyup)="handleFedPercentFieldKeyup($event)"
-                  >
-                  <div class="input-group-prepend">
-                      <span class="input-group-text" id="filter-max-amount">
-                          <i class="fa fa-percent" aria-hidden="true"></i>
-                      </span>
-                  </div>
-                </div>
-                <div class="text-error text-left"
-                  *ngIf="schedH2.get('federal_percent').errors?.min || schedH2.get('federal_percent').errors?.max"
-                >
-                  Only 0 - 100 allowed.
-                </div>
+          <div class="col col-md-2"></div>
+          <div class="col col-md-3 form-group">
+            <div class="row input-group">
+              <div class="subtitle2">
+                Federal:
               </div>
-              <div class="col col-md-4 form-group">
-                  <div class="row input-group">
-                      <div class="subtitle2" >
-                          Nonfederal:
-                      </div>
-                      <input class="form-control" 
-                        type="number" 
-                        formControlName="non_federal_percent"
-                        [ngClass]="schedH2.get('non_federal_percent')?.invalid &&
-                          (schedH2.touched || schedH2.dirty)  && isSubmit 
-                            ? 'input-field-error' : ''"
-                        (keyup)="handleNonFedPercentFieldKeyup($event)"
-                      >
-                      <div class="input-group-prepend">
-                          <span class="input-group-text" id="filter-max-amount">                                
-                              <i class="fa fa-percent" aria-hidden="true"></i>
-                          </span>
-                      </div>
-                      <button type="button" class="btn btn-info" ngbTooltip="{{ col?.infoText }}"
-                          tooltipClass="form-tooltip">
-                          <i class="info-icon" aria-hidden="true"></i>
-                          <span class="sr-only">Click here for more information</span>
-                      </button>
-                  </div>
-                  <div class="text-error text-left"
-                    *ngIf="schedH2.get('non_federal_percent').errors?.min || schedH2.get('non_federal_percent').errors?.max"
-                  >
-                    Only 0 - 100 allowed.
-                  </div>
-
+              <input
+                class="form-control"
+                type="number"
+                formControlName="federal_percent"
+                [ngClass]="
+                  schedH2.get('federal_percent')?.invalid && (schedH2.touched || schedH2.dirty) && isSubmit
+                    ? 'input-field-error'
+                    : ''
+                "
+                (keyup)="handleFedPercentFieldKeyup($event)"
+              />
+              <div class="input-group-prepend">
+                <span class="input-group-text" id="filter-max-amount">
+                  <i class="fa fa-percent" aria-hidden="true"></i>
+                </span>
+              </div>
+            </div>
+            <div
+              class="text-error text-left"
+              *ngIf="schedH2.get('federal_percent').errors?.min || schedH2.get('federal_percent').errors?.max"
+            >
+              Only 0 - 100 allowed.
+            </div>
+          </div>
+          <div class="col col-md-4 form-group">
+            <div class="row input-group">
+              <div class="subtitle2">
+                Nonfederal:
+              </div>
+              <input
+                class="form-control"
+                type="number"
+                formControlName="non_federal_percent"
+                [ngClass]="
+                  schedH2.get('non_federal_percent')?.invalid && (schedH2.touched || schedH2.dirty) && isSubmit
+                    ? 'input-field-error'
+                    : ''
+                "
+                (keyup)="handleNonFedPercentFieldKeyup($event)"
+              />
+              <div class="input-group-prepend">
+                <span class="input-group-text" id="filter-max-amount">
+                  <i class="fa fa-percent" aria-hidden="true"></i>
+                </span>
               </div>
               <button type="button" class="btn btn-info" ngbTooltip="{{ col?.infoText }}" tooltipClass="form-tooltip">
                 <i class="info-icon" aria-hidden="true"></i>
@@ -271,6 +264,16 @@
               Only 0 - 100 allowed.
             </div>
           </div>
+          <button type="button" class="btn btn-info" ngbTooltip="{{ col?.infoText }}" tooltipClass="form-tooltip">
+            <i class="info-icon" aria-hidden="true"></i>
+            <span class="sr-only">Click here for more information</span>
+          </button>
+        </div>
+        <div
+          class="text-error text-left"
+          *ngIf="schedH2.get('non_federal_percent').errors?.min || schedH2.get('non_federal_percent').errors?.max"
+        >
+          Only 0 - 100 allowed.
         </div>
       </div>
 
@@ -360,31 +363,21 @@
                         <i class="fas fa-ellipsis-h"></i>
                       </button>
 
-
-
-                                <div id="sched-h2__dropdown-action" ngbDropdownToggle class="dropdown-menu" ngbDropdownMenu>
-                                    <button class="dropdown-item">
-                                      <i class="fas fa-edit"></i> Edit
-                                    </button>
-                                    <button class="dropdown-item">
-                                        <i class="fas fa-print"></i> Print
-                                    </button>                                    
-                                    <button class="dropdown-item">
-                                        <i class="fas fa-trash"></i> Trash
-                                    </button>
-                                </div>
-                            </div>
-                        </td>
-                        
-                    </tr>
-                    </ng-container>
-                </tbody>
-            </table>              
-            <hr/>
-            <div class="d-flex justify-content-center pagination-container">
-              <pagination-controls (pageChange)="pageChanged($event)"></pagination-controls>
-            </div>
-
+                      <div id="sched-h2__dropdown-action" ngbDropdownToggle class="dropdown-menu" ngbDropdownMenu>
+                        <button class="dropdown-item"><i class="fas fa-edit"></i> Edit</button>
+                        <button class="dropdown-item"><i class="fas fa-print"></i> Print</button>
+                        <button class="dropdown-item"><i class="fas fa-trash"></i> Trash</button>
+                      </div>
+                    </div>
+                  </td>
+                </tr>
+              </ng-container>
+            </tbody>
+          </table>
+          <hr />
+          <div class="d-flex justify-content-center pagination-container">
+            <pagination-controls (pageChange)="pageChanged($event)"></pagination-controls>
+          </div>
         </ng-container>
       </div>
 
