remove optional from activity event identifier

--- a/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
+++ b/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
@@ -77,7 +77,7 @@
                         <span class="sr-only">Click here for more information</span>
                       </div>
                       <ng-container *ngIf="!col?.validation?.required 
-                        && !col?.isReadonly">
+                        && !col?.isReadonly && col?.name !== 'activity_event_identifier'">
                         (Optional)
                       </ng-container>
                     </label>
