--- a/front-end/src/app/forms/sched-h5/sched-h5.component.html
+++ b/front-end/src/app/forms/sched-h5/sched-h5.component.html
@@ -244,7 +244,7 @@
         <div class="grid-row__col grid-row__col--12">
           <div class="forms__btn-container">
             <button class="btn btn-primary btn-right" type="button" (click)="saveAddMore()">
-              Add
+              Save & Edit
             </button>
           </div>
         </div>
@@ -260,7 +260,7 @@
                 Previous
               </button>
               <a class="btn btn-primary btn-right" (click)="returnToSum()">
-                Summary
+                Save & View Summary
               </a>
             </div>
           </div>
