update button text for H3&H5

--- a/front-end/src/app/forms/sched-h3/sched-h3.component.html
+++ b/front-end/src/app/forms/sched-h3/sched-h3.component.html
@@ -355,7 +355,7 @@
           <div class="forms__btn-container">
             <button class="btn btn-primary btn-right" type="button" 
               (click)="saveAndAddMore()">
-              Save & Edit
+              Save & Add
             </button>               
           </div>
         </div>
