--- a/front-end/src/app/forms/sched-h5/sched-h5.component.html
+++ b/front-end/src/app/forms/sched-h5/sched-h5.component.html
@@ -128,12 +128,7 @@
                   [formControlName]="'total_amount_transferred'"                  
                   [attr.name]="'total_amount_transferred'" [style.width]="'50%'" [style.height]="'30px'" 
                   [attr.readonly]=true
-                  [ngClass]="
-                      frmIndividualReceipt.get('date')?.invalid &&
-                      (frmIndividualReceipt.touched || frmIndividualReceipt.dirty)
-                      ? 'input-field-error'
-                      : ''
-                  " />
+                  />
               </div>
             </div>
           </div>
@@ -176,9 +171,10 @@
                   [attr.name]="'transferred_amount'"
                   [style.width]="'50%'" 
                   [style.height]="'30px'"
+                  (blur)="handleOnBlurEvent($event, col)"
                   [ngClass]="
-                      frmIndividualReceipt.get('date')?.invalid &&
-                      (frmIndividualReceipt.touched || frmIndividualReceipt.dirty)
+                      schedH5.get('transferred_amount')?.invalid &&
+                      (schedH5.touched || schedH5.dirty)
                       ? 'input-field-error'
                       : ''
                   "
