--- a/front-end/src/app/forms/sched-h2/sched-h2.component.html
+++ b/front-end/src/app/forms/sched-h2/sched-h2.component.html
@@ -51,7 +51,7 @@
       <div class="header-content">
         <div class="float-left">
           <h2>
-            Allocation Ratios Summary
+            H2 Summary (List of H2 Ratios) 
             <!-- <ng-container *ngIf="transactionTypeText"> / {{ transactionTypeText }} </ng-container> -->
             <!-- <ng-container *ngIf="scheduleAction === editScheduleAction"> / Edit </ng-container> -->
           </h2>
