--- a/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
+++ b/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
@@ -303,7 +303,7 @@
                         bindValue="code" 
                         bindLabel="code" 
                         [selectOnTab]="true"
-                        [readonly]="isSelectFieldReadOnly(col)"
+                        [attr.readonly]="isSelectFieldReadOnly(col)"
                         [ngClass]="
                             frmIndividualReceipt.get(col?.name)?.invalid &&
                             (frmIndividualReceipt.touched || frmIndividualReceipt.dirty)
