--- a/front-end/src/app/forms/sched-f/sched-f.component.html
+++ b/front-end/src/app/forms/sched-f/sched-f.component.html
@@ -59,7 +59,7 @@
               <div class="form-check form-check-inline">                  
                 <label for="coord_expenditure_y"                   
                   [ngClass]="
-                  frmIndividualReceipt.get('coord_expenditure_yn')?.invalid &&
+                  frmIndividualReceipt.get('coordinated_exp_ind')?.invalid &&
                   (frmIndividualReceipt.touched || frmIndividualReceipt.dirty)
                     ? 'input-field-label-error'
                     : ''
@@ -67,7 +67,7 @@
                   <input
                     id="coord_expenditure_y"
                     type="radio"
-                    formControlName="coord_expenditure_yn"
+                    formControlName="coordinated_exp_ind"
                     value="Y"
                   />
                   Yes
@@ -76,7 +76,7 @@
               <div class="form-check form-check-inline">                 
                 <label for="coord_expenditure_n"
                   [ngClass]="
-                  frmIndividualReceipt.get('coord_expenditure_yn')?.invalid &&
+                  frmIndividualReceipt.get('coordinated_exp_ind')?.invalid &&
                   (frmIndividualReceipt.touched || frmIndividualReceipt.dirty)
                     ? 'input-field-label-error'
                     : ''
@@ -84,7 +84,7 @@
                   <input
                     id="coord_expenditure_n"
                     type="radio"
-                    formControlName="coord_expenditure_yn"
+                    formControlName="coordinated_exp_ind"
                     value="N"
                   />
                   No
@@ -211,19 +211,19 @@
           <div class="row">
             <div class="col col-md-5">
               <div class="form-group">
-                <label for="street_1_co_exp">
+                <label for="subordinate_cmte_street_1">
                   Street 1
                 </label>
                 <input class="form-control" 
                   type="text" 
-                  [formControlName]="'street_1_co_exp'"
-                  [attr.name]="'street_1_co_exp'"
+                  [formControlName]="'subordinate_cmte_street_1'"
+                  [attr.name]="'subordinate_cmte_street_1'"
                   [style.width]="'80%'" 
-                  id="street_1_co_exp"
+                  id="subordinate_cmte_street_1"
                   [style.height]="'30px'"
                   [maxlength]="'34'"
                   [ngClass]="
-                    frmIndividualReceipt.get('street_1_co_exp')?.invalid &&
+                    frmIndividualReceipt.get('subordinate_cmte_street_1')?.invalid &&
                     (frmIndividualReceipt.touched || frmIndividualReceipt.dirty)
                       ? 'input-field-error'
                       : ''
@@ -233,19 +233,19 @@
             </div>
             <div class="col col-md-5">
               <div class="form-group">
-                <label for="street_2_co_exp">
+                <label for="subordinate_cmte_street_2">
                     Street 2 (Optional)
                 </label>
                 <input class="form-control" 
                   type="text" 
-                  [formControlName]="'street_2_co_exp'"
-                  [attr.name]="'street_2_co_exp'"
+                  [formControlName]="'subordinate_cmte_street_2'"
+                  [attr.name]="'subordinate_cmte_street_2'"
                   [style.width]="'80%'" 
                   [style.height]="'30px'"
-                  id="street_2_co_exp"
+                  id="subordinate_cmte_street_2"
                   [maxlength]="'34'"
                   [ngClass]="
-                    frmIndividualReceipt.get('street_2_co_exp')?.invalid &&
+                    frmIndividualReceipt.get('subordinate_cmte_street_2')?.invalid &&
                     (frmIndividualReceipt.touched || frmIndividualReceipt.dirty)
                       ? 'input-field-error'
                       : ''
@@ -257,19 +257,19 @@
           <div class="row">
             <div class="col col-md-4">
               <div class="form-group">
-                <label for="city_co_exp">
+                <label for="subordinate_cmte_city">
                   City
                 </label>
                 <input class="form-control" 
                   type="text" 
-                  [formControlName]="'city_co_exp'"
-                  [attr.name]="'city_co_exp'"
-                  id="city_co_exp"
+                  [formControlName]="'subordinate_cmte_city'"
+                  [attr.name]="'subordinate_cmte_city'"
+                  id="subordinate_cmte_city"
                   [style.width]="'66%'" 
                   [style.height]="'30px'"
                   [maxlength]="'30'"
                   [ngClass]="
-                    frmIndividualReceipt.get('city_co_exp')?.invalid &&
+                    frmIndividualReceipt.get('subordinate_cmte_city')?.invalid &&
                     (frmIndividualReceipt.touched || frmIndividualReceipt.dirty)
                       ? 'input-field-error'
                       : ''
@@ -279,19 +279,19 @@
             </div>
             <div class="col col-md-4">
               <div class="form-group" [style.width]="'235px'">
-                <label for="state_co_exp">
+                <label for="subordinate_cmte_state">
                     State
                 </label>
                 <ng-select #stateSelect 
                   [items]="states"                   
                   class="forms__select" 
-                  [formControlName]="'state_co_exp'" 
-                  id="state_co_exp"
+                  [formControlName]="'subordinate_cmte_state'" 
+                  id="subordinate_cmte_state"
                   bindValue="code" 
                   bindLabel="code" 
                   [selectOnTab]="true"
                     [ngClass]="
-                    frmIndividualReceipt.get('state_co_exp')?.invalid &&
+                    frmIndividualReceipt.get('subordinate_cmte_state')?.invalid &&
                     (frmIndividualReceipt.touched || frmIndividualReceipt.dirty)
                       ? 'forms__select-error'
                       : ''
@@ -304,19 +304,19 @@
             </div>
             <div class="col col-md-4">
               <div class="form-group">
-                <label for="zip_co_exp">
+                <label for="subordinate_cmte_zip">
                     Zip
                 </label>
                 <input class="form-control" 
                   type="text" 
-                  [formControlName]="'zip_co_exp'"
-                  [attr.name]="'zip_co_exp'"
-                  id="zip_co_exp"
+                  [formControlName]="'subordinate_cmte_zip'"
+                  [attr.name]="'subordinate_cmte_zip'"
+                  id="subordinate_cmte_zip"
                   [style.width]="'33%'" 
                   [style.height]="'30px'"
                   [maxlength]="'10'"
                   [ngClass]="
-                    frmIndividualReceipt.get('zip_co_exp')?.invalid &&
+                    frmIndividualReceipt.get('subordinate_cmte_zip')?.invalid &&
                     (frmIndividualReceipt.touched || frmIndividualReceipt.dirty)
                       ? 'input-field-error'
                       : ''
@@ -324,11 +324,11 @@
                 />
                 <div class="error-text" *ngIf="
                   (frmIndividualReceipt.touched || frmIndividualReceipt.dirty) &&
-                  frmIndividualReceipt.get('zip_co_exp').invalid
+                  frmIndividualReceipt.get('subordinate_cmte_zip').invalid
                 ">
-                  <ng-container *ngIf="frmIndividualReceipt.get('zip_co_exp').errors">
+                  <ng-container *ngIf="frmIndividualReceipt.get('subordinate_cmte_zip').errors">
                     <div class="text-error text-left"
-                      *ngIf="frmIndividualReceipt.get('zip_co_exp').errors?.nonAlphaNumeric">
+                      *ngIf="frmIndividualReceipt.get('subordinate_cmte_zip').errors?.nonAlphaNumeric">
                       Alphanumeric characters only.
                     </div>
                   </ng-container>
@@ -560,7 +560,7 @@
                     <ng-container *ngIf="col?.type === 'select' && 
                         isFieldName(col?.name, 'cand_office')">
                       <ng-select #candOfficeTypeSelect
-                        [readonly]="isSelectFieldReadOnly(col)"
+                        [attr.readonly]="isSelectFieldReadOnly(col)"
                         [items]="candidateOfficeTypes"
                         (change)="handleCandOfficeChange($event, col)" 
                         class="forms__select" 
@@ -588,7 +588,7 @@
                         [formControlName]="col?.name" 
                         bindValue="code" 
                         bindLabel="code"
-                        [readonly]="isSelectFieldReadOnly(col)" 
+                        [attr.readonly]="isSelectFieldReadOnly(col)"
                         [selectOnTab]="true"
                         [ngClass]="
                             frmIndividualReceipt.get(col?.name)?.invalid &&
@@ -626,7 +626,7 @@
                         [formControlName]="col?.name" 
                         bindValue="entityType"
                         bindLabel="entityTypeDescription" 
-                        [readonly]="isSelectFieldReadOnly(col)"
+                        [attr.readonly]="isSelectFieldReadOnly(col)"
                         [selectOnTab]="true"
                         [ngClass]="
                             frmIndividualReceipt.get(col?.name)?.invalid &&
@@ -720,7 +720,7 @@
                 </a> -->
                 <a *ngIf="showPart2" class="btn btn-primary btn-right" (click)="saveAndReturnToParentDebt()">
                   Save &amp; View Expenditure
-                </a>                
+                </a>   
               </div>
             </div>
           </div>
