--- a/front-end/src/app/forms/sched-c/endorser/endorser.component.html
+++ b/front-end/src/app/forms/sched-c/endorser/endorser.component.html
@@ -288,6 +288,9 @@
               <button class="btn btn-secondary btn-right" type="button" (click)="saveAndAddMore()">
                 Add Endorsers
               </button>
+              <button class="btn btn-previous btn-right" type="button"  (click)="goToEndorserSummary()">
+                  Endorser Summary
+              </button>
               <button class="btn btn-previous btn-right" type="button"  (click)="saveEndorser()">
                 Save
               </button>
