--- a/front-end/src/app/forms/sched-c/loanpayment/loanpayment.component.html
+++ b/front-end/src/app/forms/sched-c/loanpayment/loanpayment.component.html
@@ -215,7 +215,7 @@
           Expenditure amount exceeds outstanding loan amount
         </div>
         </div>
-        <div class="form-group col col-md-3">
+        <!-- <div class="form-group col col-md-3">
           <div class="checkbox">
             <label for="memoCode">Memo Code
               <button type="button" class="btn btn-info" ngbTooltip="{{tooltipPlaceholder}}"
@@ -226,7 +226,7 @@
             </label>
             <input type="checkbox" ngModel style="transform: scale(3.0); margin-top:15px;" name="memoCode">
           </div>
-        </div>
+        </div> -->
       </div>
 
       <hr><br>
