Endorser fixes and endorser summary

--- a/front-end/src/app/forms/form-3x/f3x/f3x.component.html
+++ b/front-end/src/app/forms/form-3x/f3x/f3x.component.html
@@ -140,7 +140,7 @@
         </app-loanendorsersummary>
         
         <app-loansummary 
-          *ngIf="scheduleType === 'sched_c_ls' || scheduleType === 'sched_c_lo'"
+          *ngIf="scheduleType === 'sched_c_ls'"
           (status)="onNotify($event)">          
         </app-loansummary>
 
