--- a/front-end/src/app/forms/sched-c/endorser-summary/endorser-summary.component.html
+++ b/front-end/src/app/forms/sched-c/endorser-summary/endorser-summary.component.html
@@ -1,44 +1,39 @@
 <div class="header-content">
-  <!--<div class="float-left">-->
     <h1>
-      F3x | Schedule-C | Endorser Summary
+      F3X - Schedule C - Endorser Summary
     </h1>
     <br />
-  <!--</div>-->
  </div>
- <div  class="loanSumamry__table-container">
-  <div class="grid-row float-right loanSumamry__page-item-range">
-    <div class="float-right loanSumamry__item-range">
-      {{determineItemRange()}} of {{LoanModel?.length}}
+ <div  class="endorserSummary__table-container">
+  <div class="grid-row float-right endorserSummary__page-item-range">
+    <div class="float-right endorserSummary__item-range">
+      {{determineItemRange()}} of {{endorserModel?.length}}
     </div>
   </div>
-  <table class="table table-striped table-hover table__sortable loanSumamry__table">
+  <table class="table table-striped table-hover table__sortable endorserSummary__table">
     <thead>
       <tr>
-        <th class="loanSumamry__table-checkbox">
-            <!-- *ngIf="isLoanSummryViewActive()" -->
-        <input [@fadeInOut]  [(ngModel)]="allLoanSummrysSelected" type="checkbox"
-            (change)="changeAllLoanSummrysSelected()">
+        <th class="endorserSummary__table-checkbox">
+        <input [@fadeInOut]  [(ngModel)]="allendorserSummarysSelected" type="checkbox"
+            (change)="changeAllendorserSummarysSelected()">
         </th>
-         <th [@fadeInOut] *ngIf="isColumnVisible('name')" [class]="getSortClass('name')" (click)="changeSortDirection('name')">Name/Bank
+         <th [@fadeInOut]  [class]="getSortClass('name')" (click)="changeSortDirection('name')">Name
         </th>
-        <th [@fadeInOut] *ngIf="isColumnVisible('loan_amount_original')" [class]="getSortClass('loan_amount_original')" (click)="changeSortDirection('loan_amount_original')">Original Loan
+        <th [@fadeInOut]  [class]="getSortClass('contribution_amount')" (click)="changeSortDirection('loan_amount_original')">Guaranteed Amount`
         </th>
-        <th [@fadeInOut] *ngIf="isColumnVisible('loan_payment_to_date')" [class]="getSortClass('loan_payment_to_date')" (click)="changeSortDirection('loan_payment_to_date')">Cumulative Payment <br > to Date
+        <th [@fadeInOut]  [class]="getSortClass('employer')" (click)="changeSortDirection('loan_payment_to_date')">Employer
         </th>
-        <th [@fadeInOut] *ngIf="isColumnVisible('loan_balance')" [class]="getSortClass('loan_balance')" (click)="changeSortDirection('loan_balance')">Outstanding Balance at <br >the Close of Period 
-        </th>
-        <th [@fadeInOut] *ngIf="isColumnVisible('loan_due_date')" [class]="getSortClass('loan_due_date')" (click)="changeSortDirection('loan_due_date')">Due Date
+        <th [@fadeInOut]  [class]="getSortClass('occupation')" (click)="changeSortDirection('loan_balance')">occupation
         </th>
 
         <th class="bulk_action">
-          <div [@fadeInOut] *ngIf="isLoanSummryViewActive()" class="btn-group" ngbDropdown role="group"
+          <div [@fadeInOut] class="btn-group" ngbDropdown role="group"
             aria-label="Action dropdown">
-            <button class="btn btn-sm btn-primary loanSumamry__bulk_action_btn" 
+            <button class="btn btn-sm btn-primary endorserSummary__bulk_action_btn" 
               ngbDropdownToggle [disabled]="bulkActionDisabled">
               <i class="ellipsis-icon"></i>
             </button>
-            <div id="loanSumamry__dropdown-action" class="dropdown-menu" ngbDropdownMenu>
+            <div id="endorserSummary__dropdown-action" class="dropdown-menu" ngbDropdownMenu>
               <button class="dropdown-item" (click)="printAllSelected()">
                 <i class="print-icon"></i> Print
               </button>
@@ -47,50 +42,34 @@
               </button>
             </div> 
           </div>
-          <div [@fadeInOut] *ngIf="isRecycleBinViewActive()">
-            <button class="btn btn-sm btn-primary loanSumamry__bulk_action_btn" 
-              (click)="deleteRecyleBin()"
-              [disabled]="bulkActionDisabled">
-              <i class="trash-icon"></i>
-            </button>
-          </div>          
         </th>
       </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let ln of LoanModel | paginate: {itemsPerPage: 10, currentPage: currentPageNumber}">
+      <tr *ngFor="let ln of endorserModel | paginate: {itemsPerPage: 10, currentPage: currentPageNumber}">
         <td>
           <input [(ngModel)]="ln.selected" type="checkbox" (click)="checkForMultiChecked($event)">
         </td>
         <!-- <td [@fadeInOut] *ngIf="isColumnVisible('name')">{{ln.entity_type === 'IND' ? ln.last_name + ', ' + ln.first_name : ln.entity_nm}}</td> -->
-        <td [@fadeInOut] *ngIf="isColumnVisible('name')">{{ln.name}}</td>
-        <td [@fadeInOut] *ngIf="isColumnVisible('loan_amount_original')">{{ln.loan_amount_original | currency:'USD':'symbol-narrow':'1.2-2'}}</td>
-        <td [@fadeInOut] *ngIf="isColumnVisible('loan_payment_to_date')">{{ln.loan_payment_to_date | currency:'USD':'symbol-narrow':'1.2-2'}}</td>
-        <td [@fadeInOut] *ngIf="isColumnVisible('loan_balance')">{{ln.loan_balance | currency:'USD':'symbol-narrow':'1.2-2'}}</td>        
-        <td [@fadeInOut] *ngIf="isColumnVisible('loan_due_date')">{{ln.loan_due_date | date: 'MM/dd/yyyy' }}</td>
+        <td [@fadeInOut]>{{ln.name}}</td>
+        <td [@fadeInOut] >{{ln.contribution_amount | currency:'USD':'symbol-narrow':'1.2-2'}}</td>
+        <td [@fadeInOut] >{{ln.employer}}</td>
+        <td [@fadeInOut] >{{ln.occupation}}</td>        
 
         <td>
-          <div [@fadeInOut] *ngIf="isRecycleBinViewActive()">
-            <button class="btn btn-sm btn-primary" (click)="restoreLoanSummry(ln)">
-              <i class="undo-icon"></i>
-            </button>
-          </div>
-          <div [@fadeInOut] *ngIf="isLoanSummryViewActive()" class="btn-group" ngbDropdown role="group"
+          <div [@fadeInOut] class="btn-group" ngbDropdown role="group"
             aria-label="Action dropdown">
             <button class="btn btn-sm btn-primary" ngbDropdownToggle [disabled]="!bulkActionDisabled">
               <i class="ellipsis-icon"></i>
             </button>
-            <div id="loanSumamry__dropdown-action" class="dropdown-menu" ngbDropdownMenu>
+            <div id="endorserSummary__dropdown-action" class="dropdown-menu" ngbDropdownMenu>
               <button class="dropdown-item" (click)="editLoanPayment(ln)">
                 <i class="edit-icon"></i> Edit
-              </button>
-              <button class="dropdown-item" (click)="goToLoanRepayment(ln)">
-                <i class="edit-icon"></i> Loan Repayment
               </button>
               <button class="dropdown-item" (click)="printLoan(ln)">
                 <i class="print-icon"></i> Print
               </button>
-              <button *ngIf="ln.activeTransactionsCnt == 0" class="dropdown-item" (click)="trashLoanSummry(ln)">
+              <button *ngIf="ln.activeTransactionsCnt == 0" class="dropdown-item" (click)="trashendorserSummary(ln)">
                 <i class="trash-icon"></i> Trash
               </button>
             </div>
@@ -101,7 +80,7 @@
 
   </table>
   <hr/>
-  <div class="d-flex justify-content-center loanSumamry__table-pagination-container">
+  <div class="d-flex justify-content-center endorserSummary__table-pagination-container">
     <pagination-controls (pageChange)="currentPageNumber = $event">
     </pagination-controls>
   </div>
