endorser summary and order pipe fix

--- a/front-end/src/app/forms/sched-c/endorser-summary/endorser-summary.component.html
+++ b/front-end/src/app/forms/sched-c/endorser-summary/endorser-summary.component.html
@@ -19,11 +19,11 @@
         </th>
          <th [@fadeInOut]  [class]="getSortClass('name')" (click)="changeSortDirection('name')">Name
         </th>
-        <th [@fadeInOut]  [class]="getSortClass('contribution_amount')" (click)="changeSortDirection('loan_amount_original')">Guaranteed Amount`
+        <th [@fadeInOut]  [class]="getSortClass('contribution_amount')" (click)="changeSortDirection('contribution_amount')">Guaranteed Amount`
         </th>
-        <th [@fadeInOut]  [class]="getSortClass('employer')" (click)="changeSortDirection('loan_payment_to_date')">Employer
+        <th [@fadeInOut]  [class]="getSortClass('employer')" (click)="changeSortDirection('employer')">Employer
         </th>
-        <th [@fadeInOut]  [class]="getSortClass('occupation')" (click)="changeSortDirection('loan_balance')">occupation
+        <th [@fadeInOut]  [class]="getSortClass('occupation')" (click)="changeSortDirection('occupation')">occupation
         </th>
 
         <th class="bulk_action">
