--- a/front-end/src/app/forms/sched-c/loan.component.html
+++ b/front-end/src/app/forms/sched-c/loan.component.html
@@ -293,6 +293,11 @@
                 >
                 Endorser
               </button>
+              <!-- <button  class="btn btn-secondary btn-right" type="button"
+              (click)="_goToEndorserSummary()"
+              >
+              Endorser Summary
+            </button> -->
               <!-- (click)="_goToEndorser()" -->
                 <button class="btn btn-secondary btn-right" type="button" (click)="onSaveLoan('loanRepayment')">
                   Loan Repayment
