--- a/front-end/src/app/forms/sched-h5/sched-h5.component.scss
+++ b/front-end/src/app/forms/sched-h5/sched-h5.component.scss
@@ -244,6 +244,11 @@
   .dropdown-toggle:after {
     border: none;
   }
+
+  .totalRow {
+    font-size: 24px !important;
+    font-weight: bold !important;
+  }
 }
 
 pagination-controls /deep/ .ngx-pagination .current{
