add h3 css for breakdown total row

--- a/front-end/src/app/forms/sched-h3/sched-h3.component.scss
+++ b/front-end/src/app/forms/sched-h3/sched-h3.component.scss
@@ -262,6 +262,11 @@
   .dropdown-toggle:after {
     border: none;
   }
+
+  .totalRow {
+    font-size: 24px !important;
+    font-weight: bold !important;
+  }
 }
 
 pagination-controls /deep/ .ngx-pagination .current{
