--- a/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
+++ b/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
@@ -378,7 +378,7 @@
                         (change)="handleActivityEventNameChange($event, col)" 
                         class="forms__select activity-event-name-select" 
                         [formControlName]="col?.name" 
-                        bindValue="activityEventType"
+                        bindValue="activityEventDescription"
                         bindLabel="activityEventDescription" 
                         [selectOnTab]="true"
                         [ngClass]="
