--- a/front-end/src/app/forms/sched-h4/sched-h4.component.scss
+++ b/front-end/src/app/forms/sched-h4/sched-h4.component.scss
@@ -271,3 +271,11 @@
     margin-top: 1px  !important;
     //margin-bottom: 1px  !important;
   }
+
+  .td-arrow {
+    margin-left: auto !important;
+    .amend-arrow {
+      margin-left: 20%;
+      color: #0062cc;
+    }
+  }
