--- a/front-end/src/app/forms/sched-h5/sched-h5.component.html
+++ b/front-end/src/app/forms/sched-h5/sched-h5.component.html
@@ -133,7 +133,6 @@
                     <i class="dollar-sign-icon" aria-hidden="true"></i>
                   </span>
                 </div>
-<<<<<<< HEAD
                 <input
                   class="form-control"
                   type="text"
@@ -142,20 +141,7 @@
                   [style.width]="'50%'"
                   [style.height]="'30px'"
                   [attr.readonly]="true"
-                  [ngClass]="
-                    frmIndividualReceipt.get('date')?.invalid &&
-                    (frmIndividualReceipt.touched || frmIndividualReceipt.dirty)
-                      ? 'input-field-error'
-                      : ''
-                  "
                 />
-=======
-                <input class="form-control" type="text" 
-                  [formControlName]="'total_amount_transferred'"                  
-                  [attr.name]="'total_amount_transferred'" [style.width]="'50%'" [style.height]="'30px'" 
-                  [attr.readonly]=true
-                  />
->>>>>>> b4a29c1bc310ac5442013a48424bd76d37d3005d
               </div>
             </div>
           </div>
@@ -199,13 +185,7 @@
                   [style.height]="'30px'"
                   (blur)="handleOnBlurEvent($event, col)"
                   [ngClass]="
-<<<<<<< HEAD
-                    frmIndividualReceipt.get('date')?.invalid &&
-                    (frmIndividualReceipt.touched || frmIndividualReceipt.dirty)
-=======
-                      schedH5.get('transferred_amount')?.invalid &&
-                      (schedH5.touched || schedH5.dirty)
->>>>>>> b4a29c1bc310ac5442013a48424bd76d37d3005d
+                    schedH5.get('transferred_amount')?.invalid && (schedH5.touched || schedH5.dirty)
                       ? 'input-field-error'
                       : ''
                   "
